--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
     "test": "jest -c test/jest.config.js"
   },
   "dependencies": {
+    "@firebase/auth": "^0.16.6",
+    "@firebase/auth-types": "^0.10.3",
+    "@firebase/firestore": "^2.3.2",
     "@giphy/js-fetch-api": "^4.0.0",
     "@giphy/react-components": "^3.0.4",
     "@reduxjs/toolkit": "^1.5.0",
     "axios": "^0.21.1",
+    "firebase": "^8.6.3",
+    "firebase-admin": "^9.9.0",
     "next": "10.2.0",
     "next-compose-plugins": "^2.2.1",
+    "next-firebase-auth": "^0.13.1",
     "next-i18next": "^7.0.1",
     "prettier": "^2.2.1",
     "react": "17.0.2",
