--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 # example netlify.toml
 [build]
-  command = "next build & npm export"
+  command = "npm run export"
   functions = "netlify/functions"
   publish = "out"
 
