--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "build": "next build",
     "start": "next start",
-    "build": "CI= npm run build",
     "lint": "eslint '**/*.{js,jsx,ts,tsx,json}'",
     "prettier": "prettier --write '**/*.{js,jsx,ts,tsx,json,*rc}'",
     "test": "jest -c test/jest.config.js"
